--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,14 +10,6 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
-
 - task: CmdLine@2
   inputs:
     script: |
@@ -26,3 +18,5 @@ steps:
       echo Hello world
 
       docker -v
+
+      docker ps -a
