--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,14 @@ steps:
       docker -v
 
       docker ps -a
+
+      echo %cd%
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: |
+      # Write your commands here
+      
+      echo 'Hello world'
+      
+      pwd
