--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,3 +28,9 @@ steps:
   inputs:
     command: 'run'
     arguments: 'hello-world'
+
+- task: CmdLine@2
+  inputs:
+    script: |
+      docker ps -a
+      ifconfig
