Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ steps:
 - task: Docker@2
   inputs:
     command: 'run'
-    arguments: 'hello-world'
+    arguments: '-dit /bin/ash alpine'
 
 - task: CmdLine@2
   inputs:
