--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
 - task: CmdLine@2
   inputs:
     script: |
-      ls
+      ls -l
 
       docker ps -a
       
@@ -34,3 +34,11 @@ steps:
   inputs:
     command: 'run'
     arguments: '--net host --pid host --userns host --cap-add audit_control -e DOCKER_CONTENT_TRUST=$DOCKER_CONTENT_TRUST -v /etc:/etc:ro -v /lib/systemd/system:/lib/systemd/system:ro -v /usr/bin/containerd:/usr/bin/containerd:ro -v /usr/bin/runc:/usr/bin/runc:ro -v /usr/lib/systemd:/usr/lib/systemd:ro -v /var/lib:/var/lib:ro -v /var/run/docker.sock:/var/run/docker.sock:ro --label docker_bench_security docker/docker-bench-security'
+
+- task: CmdLine@2
+  inputs:
+    script: './docker-bench-security.sh'
+
+- task: CmdLine@2
+  inputs:
+    script: 'cat docker-bench-security.sh.log'
